[gd_scene load_steps=60 format=3 uid="uid://kd4xv22ktbk8"]

[ext_resource type="Script" path="res://scripts/combat/enemy.gd" id="1_5ktnc"]
[ext_resource type="Texture2D" uid="uid://bsx3bcku7oeis" path="res://assets/graphics/combat/combat_test_graphics/Characters/Enemies/pixelAxeBandit/Axe Bandit Attack.png" id="2_yug3r"]
[ext_resource type="Texture2D" uid="uid://ceyx3ssv54iea" path="res://assets/graphics/combat/combat_test_graphics/Characters/Enemies/pixelAxeBandit/Axe Bandit.png" id="3_q7iku"]
[ext_resource type="Texture2D" uid="uid://dgdveeepmxvqc" path="res://assets/graphics/combat/combat_test_graphics/Characters/Enemies/pixelAxeBandit/axe bandit run.png" id="4_682wd"]
[ext_resource type="Script" path="res://scripts/core/animation_tree_state.gd" id="5_458rn"]
[ext_resource type="PackedScene" uid="uid://bl51pk2vko0vm" path="res://scenes/combat/combat_health_bar.tscn" id="5_tcx13"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yqcq4"]
radius = 20.8
height = 99.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qmhym"]
radius = 39.55

[sub_resource type="CircleShape2D" id="CircleShape2D_irewp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q0c2f"]
atlas = ExtResource("2_yug3r")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hufbh"]
atlas = ExtResource("2_yug3r")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_npo52"]
atlas = ExtResource("2_yug3r")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhcan"]
atlas = ExtResource("2_yug3r")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8opkb"]
atlas = ExtResource("2_yug3r")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x32v3"]
atlas = ExtResource("2_yug3r")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j81ca"]
atlas = ExtResource("2_yug3r")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnv8t"]
atlas = ExtResource("3_q7iku")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_enrsj"]
atlas = ExtResource("3_q7iku")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6cwa"]
atlas = ExtResource("3_q7iku")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6l0m"]
atlas = ExtResource("3_q7iku")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk8cy"]
atlas = ExtResource("3_q7iku")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdmmv"]
atlas = ExtResource("3_q7iku")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvlec"]
atlas = ExtResource("4_682wd")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_eumt4"]
atlas = ExtResource("4_682wd")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7q75"]
atlas = ExtResource("4_682wd")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_42udq"]
atlas = ExtResource("4_682wd")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3hrc"]
atlas = ExtResource("4_682wd")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_turlb"]
atlas = ExtResource("4_682wd")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i4qj"]
atlas = ExtResource("4_682wd")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rnss"]
atlas = ExtResource("4_682wd")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_4bak4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0c2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hufbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npo52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhcan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8opkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x32v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j81ca")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnv8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enrsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6cwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6l0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk8cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdmmv")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvlec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eumt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7q75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42udq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3hrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_turlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i4qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rnss")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3oto2"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b1x0p"]
animation = &"get_hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tem6a"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r6yn8"]
animation = &"skill_berserk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_salig"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_idp7p"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m0fdm"]
advance_mode = 2
advance_expression = "current_state == \"ATTACKING\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i3hya"]
advance_mode = 2
advance_expression = "current_state == \"WALKING\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_70ga5"]
switch_mode = 2
advance_mode = 2
advance_expression = "current_state == \"IDLE\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o6vab"]
advance_mode = 2
advance_expression = "current_state == \"ATTACKING\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xs3ie"]
advance_mode = 2
advance_expression = "current_state == \"SKILL_BERSERK\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4h8bo"]
advance_mode = 2
advance_expression = "current_state == \"IDLE\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xl4w3"]
priority = 0
advance_mode = 2
advance_expression = "current_state == \"GETTING_HIT\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ejr6j"]
priority = 0
advance_mode = 2
advance_expression = "current_state == \"GETTING_HIT\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5xnos"]
switch_mode = 2
advance_mode = 2
advance_expression = "current_state == \"IDLE\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lxv50"]
switch_mode = 2
advance_mode = 2
advance_expression = "current_state == \"ATTACKING\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_owntu"]
priority = 0
advance_mode = 2
advance_expression = "current_state == \"GETTING_HIT\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mpjnn"]
switch_mode = 2
advance_mode = 2
advance_expression = "current_state == \"WALKING\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5up22"]
advance_mode = 2
advance_expression = "current_state == \"WALKING\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4cf6k"]
advance_mode = 2
advance_expression = "current_state == \"SKILL_BERSERK\""

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6m1py"]
states/End/position = Vector2(1081, 111)
states/Start/position = Vector2(184, 100)
states/attack/node = SubResource("AnimationNodeAnimation_3oto2")
states/attack/position = Vector2(611, 42)
states/get_hit/node = SubResource("AnimationNodeAnimation_b1x0p")
states/get_hit/position = Vector2(712, 154)
states/idle/node = SubResource("AnimationNodeAnimation_tem6a")
states/idle/position = Vector2(797, 5)
states/skill_berserk/node = SubResource("AnimationNodeAnimation_r6yn8")
states/skill_berserk/position = Vector2(525, -48)
states/walk/node = SubResource("AnimationNodeAnimation_salig")
states/walk/position = Vector2(402, 100)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_idp7p"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_m0fdm"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_i3hya"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_70ga5"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_o6vab"), "idle", "skill_berserk", SubResource("AnimationNodeStateMachineTransition_xs3ie"), "skill_berserk", "idle", SubResource("AnimationNodeStateMachineTransition_4h8bo"), "attack", "get_hit", SubResource("AnimationNodeStateMachineTransition_xl4w3"), "idle", "get_hit", SubResource("AnimationNodeStateMachineTransition_ejr6j"), "get_hit", "idle", SubResource("AnimationNodeStateMachineTransition_5xnos"), "get_hit", "attack", SubResource("AnimationNodeStateMachineTransition_lxv50"), "walk", "get_hit", SubResource("AnimationNodeStateMachineTransition_owntu"), "get_hit", "walk", SubResource("AnimationNodeStateMachineTransition_mpjnn"), "skill_berserk", "walk", SubResource("AnimationNodeStateMachineTransition_5up22"), "walk", "skill_berserk", SubResource("AnimationNodeStateMachineTransition_4cf6k")]
graph_offset = Vector2(55, -65)

[sub_resource type="Animation" id="Animation_q4tl2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -67)]
}

[sub_resource type="Animation" id="Animation_kvjdg"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_bwh3k"]
resource_name = "get_hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(3.625, 3.625), Vector2(4.613, 4.613), Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -67), Vector2(0, -60), Vector2(0, -76), Vector2(0, -66)]
}

[sub_resource type="Animation" id="Animation_xvpet"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_qgsh1"]
resource_name = "skill_berserk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_8ecui"]
resource_name = "walk"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_df5fh"]
_data = {
"RESET": SubResource("Animation_q4tl2"),
"attack": SubResource("Animation_kvjdg"),
"get_hit": SubResource("Animation_bwh3k"),
"idle": SubResource("Animation_xvpet"),
"skill_berserk": SubResource("Animation_qgsh1"),
"walk": SubResource("Animation_8ecui")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(500, 0)
collision_mask = 6
script = ExtResource("1_5ktnc")
attack_damage = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.26, -50)
shape = SubResource("CapsuleShape2D_yqcq4")
debug_color = Color(0.992482, 0, 0.251412, 0.42)

[node name="Areas" type="Node2D" parent="."]

[node name="Areas_FacingRight" type="Node2D" parent="Areas"]

[node name="AttackArea_Melee_R" type="Area2D" parent="Areas/Areas_FacingRight"]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Areas_FacingRight/AttackArea_Melee_R"]
position = Vector2(0, -62.585)
shape = SubResource("CircleShape2D_qmhym")

[node name="Areas_FacingLeft" type="Node2D" parent="Areas"]
visible = false

[node name="AttackArea_Melee_L" type="Area2D" parent="Areas/Areas_FacingLeft"]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Areas_FacingLeft/AttackArea_Melee_L"]
position = Vector2(0, -62.585)
shape = SubResource("CircleShape2D_qmhym")

[node name="Area_ScanRadius" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Area_ScanRadius"]
position = Vector2(3, -53)
scale = Vector2(15, 15)
shape = SubResource("CircleShape2D_irewp")
debug_color = Color(0.772201, 0.443305, 9.62615e-07, 0.42)

[node name="Animator" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Animator"]
texture_filter = 1
position = Vector2(0, -67)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_4bak4")
animation = &"idle"

[node name="AnimationTree" type="AnimationTree" parent="Animator"]
active = false
tree_root = SubResource("AnimationNodeStateMachine_6m1py")
anim_player = NodePath("../AnimationPlayer")
script = ExtResource("5_458rn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animator"]
libraries = {
"": SubResource("AnimationLibrary_df5fh")
}

[node name="Timers" type="Node2D" parent="."]

[node name="Attacks" type="Node2D" parent="Timers"]

[node name="AttackTimer" type="Timer" parent="Timers/Attacks"]
wait_time = 2.5
one_shot = true

[node name="Skill_Berserk_Duration" type="Timer" parent="Timers/Attacks"]
wait_time = 5.0
one_shot = true

[node name="Skill_Berserk_DiceThrow_Timer" type="Timer" parent="Timers/Attacks"]
wait_time = 0.25
one_shot = true

[node name="Skill_Berserk_Timer" type="Timer" parent="Timers/Attacks"]
wait_time = 0.75
one_shot = true

[node name="Skill_Berserk_Cooldown" type="Timer" parent="Timers/Attacks"]
wait_time = 15.0
one_shot = true

[node name="CombatHealthBar" parent="." instance=ExtResource("5_tcx13")]
offset_top = -140.0
offset_bottom = -140.0
